# koktai

./: .gitignore  01.html  02.html  03.html  04.html  05.html  06.html  07.html  08.html  09.html  10.html  11.html  12.html  13.html  14.html  15.html  16.html  17.html  18.html  19.html  20.html  21.html  22.html  23.html  24.html  25.html  26.html  COPYRIGHT  Cargo.toml  Makefile  README-preview.md  README.md  Read Me.docx  astro.config.mjs  beta01k.dic  beta02k.dic  beta03k.dic  beta04k.dic  beta05k.dic  beta06k.dic  (+39 more)
Wiki/: <img src="img-m3-fa4e.png" ->-<img src="img-m3-fa76.png" ->.wiki  <img src="img-m3-fa4e.png" ->ˇ-<img src="img-m3-fa76.png" ->ˇ.wiki  <img src="img-m3-fa4e.png" ->ˊ-<img src="img-m3-fa76.png" ->ˊ.wiki  <img src="img-m3-fa4e.png" ->ˋ-<img src="img-m3-fa76.png" ->ˋ.wiki  <img src="img-m3-fa6f.png" ->.wiki  <img src="img-m3-fa6f.png" ->ˇ.wiki  <img src="img-m3-fa6f.png" ->ˊ.wiki  <img src="img-m3-fa6f.png" ->ˋ.wiki  <mark>&#xf815e;<-mark>.wiki  fa4e-fa76.wiki  fa4eˇ-fa76ˇ.wiki  fa6fˇ.wiki  fa6fˊ.wiki  fa6fˋ.wiki  xf815e.wiki  ·<img src="img-m3-fa6f.png" ->.wiki  ·ㄅㄚ.wiki  ·ㄅㄛ.wiki  ·ㄅㄞ.wiki  ·ㄅㄟ.wiki  ·ㄇㄚ.wiki  ·ㄇㄛ-·<img src="img-m3-fa43.png" -><img src="img-m3-fa63.png" ->.wiki  ·ㄇㄜ.wiki  ·ㄇㄣ.wiki  ·ㄈㄣ.wiki  ·ㄈㄤ.wiki  ·ㄈㄨ.wiki  ·ㄉㄚ.wiki  ·ㄉㄜ.wiki  ·ㄉㄠ.wiki  ·ㄉㄥ.wiki  ·ㄉㄨㄛ.wiki  ·ㄊㄡ.wiki  ·ㄊㄥ.wiki  ·ㄋㄚ.wiki  ·ㄋㄜ.wiki  ·ㄋㄤ.wiki  ·ㄌㄚ.wiki  (+1325 more)
crates/koktai-font/: Cargo.toml  README.md
crates/koktai-font/src/: bitmap.rs  cmexuf.rs  error.rs  io_ext.rs  lib.rs  tai.rs  xfn.rs
crates/koktai-font/tests/: cmex_fixture.rs  cmex_template.rs  xfn_etp.rs
(+363 files in other folders)
