[package]
name = "koktai-font"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Rust port of the Koktai CMEX user-font (cmexuf) and XFN font toolchains"
readme = "README.md"

[lib]
name = "koktai_font"

[[bin]]
name = "xfn2gif"
path = "src/bin/xfn2gif.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["gif", "png"] }
thiserror = "2"

[dev-dependencies]
tempfile = "3"